# SfxPOSReader

./: CMakeLists.txt  README.md
doc/: build.sh
doc/md/: SfxPOSReader.md
src/: main.cpp
